@@ -87,17 +87,23 @@ extraResourceOptions=
 5=reports.c
 6=map.c
 7=analyze.c
+8=defrag.c
 [Header]
 1=udefrag-internals.h
 [Resource]
 1=udefrag.rc
 [Other]
 [History]
-volume.c,2071
-..\..\include\udefrag-kernel.h,1346
-udefrag.def,350
-udefrag-mingw.def,375
-rsc\header.html,626
-main.dox,1453
-udefrag.c,8962
-..\..\include\udefrag.h,2577
+volume.c,6519
+reports.c,5499
+analyze.c,2095
+options.c,900
+..\..\include\udefrag.h,1579
+udefrag.build,122
+udefrag-internals.h,3843
+udefrag.def,139
+udefrag-mingw.def,84
+main.dox,1775
+map.c,896
+int64.c,0
+udefrag.c,10090
