@@ -3,6 +3,7 @@ HISTORY
   Version 5.0.0  2010-11-
   ------------------------------------------------------------------------------
     alpha3:
+    - defragmentation algorithm was reimplemented
     - actions to take after processing is done implemented as separate menu
     - file status was added to reports
     - the following translations were updated:
